--- a/PrimeGenerator/Pages/Index.cshtml
+++ b/PrimeGenerator/Pages/Index.cshtml
@@ -24,4 +24,5 @@
     <input type="submit">
 </form>
 
-<h2> Found Prime:@Model.Prime </h2>
+<h2> Found Prime: @Model.Prime </h2>
+<p> @Model.Message  </p>
