--- a/PrimeGenerator/Pages/Index.cshtml
+++ b/PrimeGenerator/Pages/Index.cshtml
@@ -14,7 +14,7 @@
     <br />
 
     <a href="https://en.wikipedia.org/wiki/Circular_prime"> Circular prime</a>:
-    <input type="checkbox" name="IsCircular" asp-for="IsPalindrome">
+    <input type="checkbox" name="IsCircular" asp-for="IsCircular">
     <br />
 
     <a href="https://en.wikipedia.org/wiki/Truncatable_prime"> Right truncatable prime</a>:
